change name to QuickNode

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "RestfulNode",
+    "name": "QuickNode",
     "description": "A framework that makes it easier to create restful APIs for web",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "dependencies": {
         "express": "latest",
         "mysql2": "latest",
