--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-    "name": "QuickNode",
-    "description": "A framework that makes it easier to create restful APIs for web",
-    "version": "0.1.1",
+    "name": "QBite",
+    "description": "The backend of Qbite",
+    "version": "1.0.1",
     "dependencies": {
         "express": "latest",
+        "stripe": "latest",
         "mysql2": "latest",
         "connect-multiparty": "latest",
         "trim": "latest",
         "htmlspecialchars": "latest",
         "md5": "latest",
         "ali-oss": "latest",
+        "qr-image": "latest",
         "nodemailer": "latest",
         "nodemailer-smtp-transport": "latest",
         "superagent": "latest",
