--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "quicknode",
-    "version": "1.1.6",
+    "version": "2.0.0",
     "author": "devilyouwei",
     "keywords": [
-        "quicknode",
+        "QuickNode",
         "nodejs",
         "RESTful",
         "API",
@@ -13,15 +13,28 @@
     ],
     "description": "A simple and easy way for you to create RESTful API on Node.js.",
     "main": "server.js",
+    "scripts": {
+        "dev": "pm2-dev start server.js",
+        "restart": "pm2 restart server.js",
+        "start": "pm2 start server.js",
+        "stop": "pm2 stop server.js",
+        "status": "pm2 status",
+        "delete": "pm2 delete app.js",
+        "pm2-update": "pm2 update"
+    },
     "dependencies": {
-        "express": "latest",
-        "mysql2": "latest",
-        "connect-multiparty": "latest",
-        "trim": "latest",
-        "htmlspecialchars": "latest",
-        "md5": "latest",
-        "superagent": "latest",
-        "app-root-path": "latest"
+        "@stdlib/assert-is-json": "^0.1.1",
+        "app-root-path": "^3.1.0",
+        "axios": "^1.6.5",
+        "connect-multiparty": "^2.2.0",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "htmlspecialchars": "^1.0.5",
+        "md5": "^2.3.0",
+        "mysql2": "^3.7.1",
+        "pm2": "^5.3.0",
+        "sequelize": "^6.35.2",
+        "trim": "^1.0.1"
     },
     "devDependencies": {
         "eslint": "^6.8.0",
