--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     },
     "dependencies": {
         "@stdlib/assert-is-json": "^0.1.1",
+        "ali-oss": "^6.20.0",
         "app-root-path": "^3.1.0",
         "axios": "^1.6.5",
         "connect-multiparty": "^2.2.0",
+        "dicom-parser": "^1.8.21",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "htmlspecialchars": "^1.0.5",
@@ -37,6 +39,7 @@
         "trim": "^1.0.1"
     },
     "devDependencies": {
+        "@types/ali-oss": "^6.16.11",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-prettier": "^3.1.2",
